--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -14,7 +14,7 @@
         <% @cocktails.each do |cocktail| %>
             <div class="col-4">
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-img-top" style="background-image: url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')"></div>
                 <div class="card-body">
                   <h5 class="card-title"><%=cocktail.name %></h5>
                   <%= link_to "Check more", cocktail_path(cocktail), class: "btn btn-primary" %>
